<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hotmail.tri.thanos.booksearch.DetailsActivity"
    android:gravity="center_horizontal">

    <ImageButton
        android:contentDescription="@string/share_button_string"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/detailsShareButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_menu_share" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"
        android:text="@string/share_text_string"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toLeftOf="@+id/detailsShareButton"
        android:layout_toStartOf="@+id/detailsShareButton"
        android:layout_alignTop="@+id/detailsShareButton"
        android:layout_alignBottom="@+id/detailsShareButton"
        android:id="@+id/detailsShareText"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detailsScroller"
        android:layout_below="@+id/detailsShareButton" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"  >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/detailsCoverImage"
                android:contentDescription="@string/book_title_cover_string"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_init_text"
                android:id="@+id/detailsTitleText"
                android:layout_margin="5dp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/authors_init_text"
                android:id="@+id/detailsAuthorsText"
                android:layout_margin="5dp"
                android:gravity="center" />

            <View
                android:id="@+id/detailsDivider"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:foregroundGravity="center_horizontal"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/publisher_init_string"
                android:id="@+id/detailsPublisherText"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pages_init_string"
                android:id="@+id/detailsPagesText"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
