<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hotmail.tri.thanos.booksearch.EditionsActivity">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="130dp"
        android:id="@+id/coverImage"
        android:contentDescription="@string/book_title_cover_string"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_init_text"
        android:id="@+id/titleText"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/coverImage"
        android:layout_toEndOf="@+id/coverImage"
        android:gravity="end|center_horizontal"
        android:layout_alignTop="@+id/coverImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/editions_authors_init_text"
        android:id="@+id/authorsText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="bottom|end"
        android:textStyle="italic"
        android:layout_toRightOf="@+id/coverImage"
        android:layout_toEndOf="@+id/coverImage"
        android:layout_below="@+id/titleText"
        android:layout_alignBottom="@+id/coverImage"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/editions_found_number"
        android:id="@+id/editionsText"
        android:layout_below="@+id/coverImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textStyle="italic" />

    <View
        android:id="@+id/detailsDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/editionsText" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detailsDivider"
        android:layout_marginTop="5dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/editionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_marginTop="5dp" />

        <ProgressBar
            style="?android:progressBarStyle"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/editionsLoadingSpinner"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

</RelativeLayout>
